--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,10 @@ dependencies {
 
     //navigation
     implementation "androidx.navigation:navigation-compose:$nav_version"
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    //retrofit gson
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 }
